package solid.dip.compliant;

public interface IPrinterService {
    
    public void print(String text);

}
